--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@
         translateZ(550px);
 }
 .banner .slider .item img{
+    border-radius:10px;
     width: 100%;
     height: 100%;
     object-fit: cover;
